Major Feature Additions and Bug Fixes - Added client-side handler for when socket loses connection with server. - Added server-side user message sanitization (escape HTML characters, trim whitespace, don't send only whitespace messages). - Added feature where the chat box will be automatically focused when you join a room, and prompt text boxes will be automatically focused when they pop up. - Added feature where you can press enter on text fields to automatically submit them instead of having to click the 'SUBMIT' button. - Fixed bug where closing the tab while connected to a room wouldn't send a 'User has left' message to the room. - Fixed bug where if a user closed the tab while not connected to a room it wouldn't remove their name from the 'Users here now' list of every user on the server that users who haven't joined a room yet see. - Fixed bug where users could send messages via the global room even though they weren't connected to a room yet. - Fixed bug where closing the tab while connected to a room, resulting in the room being empty, wouldn't cause the room to be deleted. - Fixed bug where entering a username that is already would not bring up the username prompt box again to enter a new name.

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -11,6 +11,10 @@ $sideWidth: 202px;
 $createRoomBG: rgb(238, 238, 238);
 $backgroundGradient: linear-gradient(to top left, #000, #404040);
 
+body.useless {
+	opacity: 0.4;
+	pointer-events: none;
+}
 #container {
 	textarea {
 		resize: none;
